--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -51,4 +51,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           local-dir: "./dist/my-portfolio-website/"
-          server-dir: "/"
+          server-dir: "./"
